--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "argon2": "^0.43.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "helmet": "^8.1.0",
     "mongoose": "^8.13.2",
     "passport": "^0.7.0",
