--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "simplebar": "^6.3.1",
+    "simplebar-react": "^3.3.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.42"
