--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.56.4",
     "simplebar": "^6.3.1",
     "simplebar-react": "^3.3.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.42"
