--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "virtua": "^0.41.5",
     "zod": "^3.25.42"
   },
   "devDependencies": {
