--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ env:
 
 jobs:
   build-and-push:
+    if: github.event_name == 'push'
     name: Build and Push to ECR
     runs-on: ubuntu-latest
 
