--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,6 @@ on:
 env:
   AWS_REGION: ap-southeast-7
   ECR_REPOSITORY: chatapp-server
-  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build-and-push:
@@ -25,6 +24,32 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Read current version
+        id: version
+        run: |
+          VERSION_FILE=server/VERSION
+          if [ ! -f "$VERSION_FILE" ]; then
+            echo "1.0.0" > $VERSION_FILE
+          fi
+          CURRENT_VERSION=$(cat $VERSION_FILE)
+
+          # แยก Major.Minor.Patch
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
+          PATCH=$((PATCH+1))
+          NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo $NEW_VERSION > $VERSION_FILE
+          echo "Version bumped to $NEW_VERSION"
+
+      - name: Commit new version
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add server/VERSION
+          git commit -m "Bump version to $NEW_VERSION" || echo "No changes to commit"
+          git push origin main || echo "No push (likely running on PR)"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -49,13 +74,14 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build and push Docker image
+        id: build-and-push
         uses: docker/build-push-action@v5
         with:
           context: ./server
           file: ./server/Dockerfile
           push: true
           tags: |
-            ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+            ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.NEW_VERSION }}
             ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
@@ -68,54 +94,3 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.build-and-push.outputs.digest }}
-
-  security-scan:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.event_name == 'push'
-
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-          format: sarif
-          output: trivy-results.sarif
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
-        with:
-          sarif_file: trivy-results.sarif
-
-  deploy-notification:
-    name: Deploy Notification
-    runs-on: ubuntu-latest
-    needs: [build-and-push, security-scan]
-    if: always() && github.event_name == 'push'
-
-    steps:
-      - name: Deployment Success Notification
-        if: needs.build-and-push.result == 'success'
-        run: |
-          echo "🚀 Deployment successful!"
-          echo "Image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
-          echo "Region: ${{ env.AWS_REGION }}"
-
-      - name: Deployment Failure Notification
-        if: needs.build-and-push.result == 'failure'
-        run: |
-          echo "❌ Deployment failed!"
-          exit 1
