--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -94,10 +94,10 @@ jobs:
     needs: build-frontend
     uses: ./.github/workflows/deploy-k8s.yaml
     with:
-      environment: "production"
+      environment: "app-ns"
       service_name: "frontend"
       image_tag: ${{ startsWith(github.event.release.tag_name, 'v') && format('frontend-{0}', github.event.release.tag_name) || github.event.release.tag_name }}
-      ecr_repository: "your-frontend-repo"
+      ecr_repository: "chatapp-server"
     secrets:
       DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       DO_CLUSTER_ID: ${{ secrets.DO_CLUSTER_ID }}
@@ -114,7 +114,7 @@ jobs:
       environment: "production"
       service_name: "backend"
       image_tag: ${{ startsWith(github.event.release.tag_name, 'v') && format('backend-{0}', github.event.release.tag_name) || github.event.release.tag_name }}
-      ecr_repository: "your-backend-repo"
+      ecr_repository: "chatapp-server"
     secrets:
       DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       DO_CLUSTER_ID: ${{ secrets.DO_CLUSTER_ID }}
